Allow cells to be alive/dead onClick. Add if/else for toggling cell to alive or dead.

--- a/gol.css
+++ b/gol.css
@@ -11,3 +11,11 @@ td {
     width: 10px;
     height: 10px;
 }
+
+td.dead {
+    background-color: transparent;
+}
+
+td.alive {
+    background-color: thistle;
+}
