--- a/gol.css
+++ b/gol.css
@@ -3,7 +3,7 @@
 }
 
 table {
-    background-color: whitesmoke;
+    background-color: rgb(86, 5, 192);
 }
 
 td {
@@ -13,9 +13,9 @@ td {
 }
 
 td.dead {
-    background-color: transparent;
+    background-color: rgb(125, 190, 252);
 }
 
 td.alive {
-    background-color: thistle;
+    background-color: rgb(207, 19, 207);
 }
